demo/manifests/3-request-routing/path-based-routing/nginx-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-path-routing
  namespace: nginx-demo
spec:
  parentRefs:
    - name: prod-gateway
      namespace: infra-gateway-system
  hostnames: ["nginx-path.apps.example.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hello
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: nginx-hello-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /bye
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: nginx-bye-service
          port: 80
